--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="./css/main.css" />
     <title>𝐹𝑜𝑟𝑒𝑣𝑒𝑟 𝑃𝑙𝑎𝑦𝑒𝑟 ♪</title>
-    <link rel="icon" type="image/png" href="/BETA/mini-player-master/Janka_Hearts.256.92791.jpg" />
+    <link rel="icon" type="image/png" href="Janka_Hearts.256.92791.jpg" />
     <link rel="stylesheet" href="font.css">
   <link rel="stylesheet" href="main.css">
   <!--Icon-Font-->
